deploy/argo-workflows/overlays/kind/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: 'nginx'
    ingress.kubernetes.io/app-root: '/'
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
    - host: porter-argo.localtest.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
